<resources>
    <string name="app_name">JasonSDK</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="process_status">Process Status</string>
    <string name="results">Results</string>
    <string name="sky_plot_url">Skyplot:</string>
    <string name="process_type">Process Type</string>
    <string name="spp_csv_url">SPP CSV</string>
    <string name="process_results">Process Results</string>
    <string name="spp_kml_url">SPP KML:</string>
    <string name="upload_process">Upload Process</string>
    <string name="file">File:</string>
    <string name="select_file">Select File</string>
    <string name="process">Process</string>
    <string name="sign_up_in_https_jason_rokubun_cat">Sign up in https://jason.rokubun.cat</string>
    <string name="retry_text">Retry</string>
    <string name="process_log">Process Log</string>
</resources>
